[package]
name = "telemega"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
num-complex = "0.4"
async-libhackrf = { path = "../async-libhackrf" }
itertools = "0.12"
bus = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4.3"
ringbuffer = "0.15.0"